fix last message cut off bug

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ h1 {
 
 #message-container {
     width: 60%;
+    height: 375px;
     max-width: 500px;
     max-height: 375px;
     overflow-y: scroll;
@@ -57,7 +58,6 @@ h1 {
 }
 
 #send-container {
-    position: fixed;
     padding-bottom: 30px;
     bottom: 0;
     background-color: rgb(50, 50, 50);
